--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@fortawesome/angular-fontawesome": "^0.10.1",
     "animate.css": "^4.1.1",
+    "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "moment": "^2.29.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
