--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -15,8 +15,11 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker-practice/actions-setup-docker@master
 
-    - name: Login to Docker Registry
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker images
       run: |
@@ -33,4 +36,3 @@ jobs:
           cd /
           docker-compose pull
           docker-compose up -d
-        '
