--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -35,4 +35,6 @@ jobs:
         ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SSH_HOST '
           cd ./
           docker-compose pull
+          docker-compose down
+          docker-compose rmi pabvlov/pabvlov
           docker-compose up -d
