--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -33,6 +33,6 @@ jobs:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
         ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SSH_HOST '
-          cd ./
+          cd /root/
           docker-compose pull
           docker-compose up -d
