--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,7 +5,6 @@ on:
     branches: [ main ]
 
 jobs:
-
   deploy:
     runs-on: ubuntu-latest
 
@@ -15,11 +14,17 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker-practice/actions-setup-docker@master
 
+    - name: Install Docker Compose
+      run: |
+        curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | jq -r '.tag_name')/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose
+        chmod +x /usr/local/bin/docker-compose
+        docker-compose --version
+
     - name: Login to DockerHub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_TOKEN }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
 
     - name: Build and push Docker images
       run: |
@@ -33,7 +38,8 @@ jobs:
         SSH_KEY: ${{ secrets.SSH_KEY }}
       run: |
         ssh -o StrictHostKeyChecking=no $SSH_USERNAME@$SSH_HOST '
-          cd /root/
+          cd /root
           docker-compose pull
+          docker-compose down
           docker-compose up -d
         '
